# karma

./: .gitignore  CMakeLists.txt  README.md  project.godot  windows-setup.bat
characters/Sasa/: KinematicBody2D.gd  Sasa.gd  Sasa.tscn
characters/Sasa/textures/: sasa_idle_1.png.import  sasa_idle_2.png.import  sasa_walk-1.png.import  sasa_walk-2.png.import  sasa_walk-3.png.import  sasa_walk-4.png.import
cmake/: BuildLocation.cmake  External_SFML.cmake  External_game.cmake
game/: CMakeLists.txt  director.cpp  director.hpp  gameobject.cpp  gameobject.hpp  main.cpp  scene.cpp  scene.hpp
scenes/Main/: Main.tscn  MainCam.gd
tilesets/tileset1/: tileset1.tres  tileset1.tscn
tilesets/tileset1/textures/: earth-1.png.import  earth-2.png.import  earth-3.png.import  earth-4.png.import  earth-5.png.import  earth-6.png.import  ground1.png.import
tilesets/tileset1/textures/source/: earth-1.kra  earth-2.kra  earth-3.kra  earth-4.kra  earth-5.kra  earth-6.kra
